# game-of-life

./: .rustfmt.toml  Cargo.toml  planning.txt
resources/prefabs/: exploder.json  glider.json  glider_gun.json  lw_spaceship.json  small_exploder.json  tumbler.json
src/: ecs.rs  game.rs  main.rs
src/components/: gameplay.rs  mod.rs  sound.rs  window.rs
src/ecs/: mod.rs
src/ecs/entities/: entity.rs  mod.rs
src/ecs/systems/: camera.rs  dear_imgui.rs  gameplay.rs  mod.rs  prefabs.rs  rule_setter.rs  simple_serialization.rs  sound.rs  sound_player.rs  user_input.rs  window.rs
src/entity/: entity.rs  generational_index.rs  mod.rs
src/rendering/: buffer_bundle.rs  loaded_image.rs  mod.rs  pipeline_bundle.rs  renderer.rs  renderer_commands.rs  renderer_errors.rs  vertex.rs
src/rendering/shaders/: .clang-format  default_frag.frag  default_vert.vert  frag_default.frag  imgui_frag.frag  imgui_vert.vert  vert_default.vert
src/resources/: mod.rs  preferences.rs  sound_files.rs
src/utilities/: color.rs  mod.rs  time.rs  vec2.rs  vec2_int.rs
